<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setting_header">
        <EditTextPreference
            app:key="alist_url"
            app:title="@string/Alist_url_title"
            app:summary="@string/Alist_url_desp"
            app:defaultValue="http://alist.example.com"/>
        <EditTextPreference
            app:key="user_agent"
            app:title="@string/user_agent_title"
            app:summary="@string/user_agent_desp"
            app:defaultValue="pan.baidu.com" />
        <Preference
            android:key="reload_app"
            android:title="@string/reload_app" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_header">
        <Preference
            android:key="version"
            android:title="@string/version_title" />
    </PreferenceCategory>

    <!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>